--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.9.5",
+    "oh-vue-icons": "^1.0.0-rc3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
