--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -10,6 +10,6 @@
       "@/*": ["*"],
       "@/libs/*": ["libs/*"]
     },
-    "types": ["element-plus/global"]
+    "types": ["element-plus/global"],
   }
 }
