--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "apexcharts": "^4.5.0",
     "element-plus": "^2.9.5",
     "oh-vue-icons": "^1.0.0-rc3",
