--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,12 @@
 version: '3'
 services:
-  # Frontend Service
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
+  app:
+    image: node:22  # Usando a imagem oficial do Node.js (um único contêiner)
+    working_dir: /app
     volumes:
-      - ./frontend/src:/app/src  # Monta a pasta src para hot reload
+      - ./backend:/app/backend  # Monta o backend no contêiner
+      - ./frontend:/app/frontend # Monta o frontend no contêiner
     ports:
-      - "5173:5173"  # Porta do Vite
-    environment:
-      - VITE_API_URL=http://localhost:3000  # Comunicação com o backend
-  
-  # Backend Service
-  backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./backend/src:/app/src  # Monta a pasta src para hot reload
-    ports:
-      - "3000:3000"  # Porta do backend
-    depends_on:
-      - db  # O backend depende do banco de dados (caso tenha)
-  
-  # Banco de Dados Service (Exemplo com PostgreSQL)
-  db:
-    image: postgres:alpine
-    environment:
-      POSTGRES_PASSWORD: example
-    volumes:
-      - db_data:/var/lib/postgresql/data
-
-# Volumes persistentes para o banco de dados
-volumes:
-  db_data:  
+      - "3000:3000"  # Porta do backend (Express)
+      - "5173:5173"  # Porta do frontend (Vite)
+    command: ["bash", "-c", "cd /app/backend && npm install && npm run dev & cd /app/frontend && npm install && npm run dev"]
